[tool.poetry]
name = "discordbot"
version = "1.1.0"
description = "A discord bot that wishes you happy birthday!"
authors = [
  "Om Sharma <you@example.com>",
  "Lior Carmelli <you@example.com>",
  "Joseph Huber <you@example.com>",
  "Theodosee Topaloff <you@example.com>",
  "Venkadesh Eswaranandam <you@example.com>",
  "Nicholas Belev <you@example.com>",
  "Tomer Carmelli <you@example.com>",
  # ETC
]

readme = "README.md"

repository = "https://github.com/NHS-CS-Club/DiscordBot"
homepage = "https://github.com/NHS-CS-Club/DiscordBot"

keywords = ["discord"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
replit = "^3.2.4"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
